# brandaniethical

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/brandaniethical/: brandaniethical.py  pyproject.toml
tests/: test_brandaniethical.py
vignette/: vignette_trendyesg.ipynb  vignettes_brandaniethical.ipynb
