[tool.poetry]
name = "brandaniethical"
version = "0.1.0"
description = "A package for green consumers and investors to quickly get a view of fashion brands’ animal policy, rate, and animal material usage. and check trendy tickers esg from yahoo finance and esg api"
authors = ["Yang Hu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
